--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,12 @@
     -->
     <title>React App</title>
   </head>
+  <style>
+  @font-face {
+        font-family: "starwars";
+        src: url("STARWARS.TTF");
+        font-weight: bold;
+      }</style>
   <body>
     <noscript>
       You need to enable JavaScript to run this app.
